<resources>
    <string name="app_name">Arendator</string>
    <string name="action_settings">Настройки</string>
    <string name="action_bookmarks">Закладки</string>

    <string name="home">Главная</string>
    <string name="home_title">Объявления</string>
    <string name="remove_bookmarks">Удалить закладки</string>

    <string name="confirm">Да</string>
    <string name="cancel">Отмена</string>

    <string name="settings">Настройки</string>
    <string name="bookmarks">Закладки</string>

    <string name="return_back">Вернуться назад</string>
    <string name="close">Закрыть</string>

    <string name="add_favorites">Добавить в избранное</string>

    <string name="empty_description">Смотрите фото для подробностей</string>
    <string name="currency">%1$s руб</string>

    <string name="photo_description">Фотография</string>
    <string name="vk_link">В профиль пользователя</string>

    <string name="farebase_error">Произошла ошибка при синхронизации с Google Play. Убедитесь, что у вас активирована последняя версия для получения уведомлений.</string>
    <string name="send_token_error">Произошла ошибка при сохранении настроек на сервере. Попробуйте снова через некоторое время.</string>

    <string name="send_feedback">Feedback отправлен.</string>
    <string name="send_feedback_button">Отправить</string>

    <string name="drop_down_description">Стрелка меню c выбором</string>


    <string name="no_data_available">Объявления отсутствуют</string>
    <string name="no_bookmarks">Список пуст</string>
    <string name="key_words_alert">"Допускается не более 5 ключевых слов"</string>

    <string name="confirm_bookmarks_deletion">Вы действительно хотите удалить объявления из закладок?</string>


    <string name="favorites_added">Добавлено в избранное</string>
    <string name="database_unavailable">Проблемы при работе с Базой данных</string>
    <string name="contains_photos">Есть фотографии</string>

    <string name="refresh_results">Обновить страницу</string>

    <string name="results_failure">Произошла ошибка при получении данных с сервера</string>

    <string name="today_time">Сегодня</string>
    <string name="yesterday_time">Вчера</string>
    <string name="prefix_time">&#160;в&#160;</string>
    <string-array name="months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <string name="city">Город</string>
    <string name="district">Район</string>

    <string-array name="city_names">
        <item>Нижний Новгород</item>
        <item>Москва</item>
        <item>Сочи</item>
        <item>Санкт-Петербург</item>
    </string-array>

    <string-array name="city_values" translatable="false">
        <item>nn</item>
        <item>msc</item>
        <item>soc</item>
        <item>spb</item>
    </string-array>

    <string-array name="district_names_nn">
        <item>Автозаводский</item>
        <item>Канавинский</item>
        <item>Советский</item>
        <item>Сормовский</item>
        <item>Нижегородский</item>
        <item>Ленинский</item>
        <item>Приокский</item>
        <item>Московский</item>
    </string-array>

    <string-array name="district_names_msc">
        <item>Центральный</item>
        <item>Северный</item>
        <item>Северо-Восточный</item>
        <item>Восточный</item>
        <item>Юго-Восточный</item>
        <item>Южный</item>
        <item>Юго-Западный</item>
        <item>Западный</item>
        <item>Северо-Западный</item>
        <item>Зеленоградский</item>
        <item>Троицкий</item>
        <item>Новомосковский</item>
    </string-array>

    <string-array name="district_names_soc">
        <item>Лазаревский</item>
        <item>Хостинский</item>
        <item>Центральный</item>
        <item>Адлерский</item>
    </string-array>

    <string-array name="district_names_spb">
        <item>Адмиралтейский</item>
        <item>Василеостровский</item>
        <item>Выборгский</item>
        <item>Калининский</item>
        <item>Кировский</item>
        <item>Колпинский</item>
        <item>Красногвардейский</item>
        <item>Красносельский</item>
        <item>Кронштадтский</item>
        <item>Курортный</item>
        <item>Московский</item>
        <item>Невский</item>
        <item>Петроградский</item>
        <item>Петродворцовый</item>
        <item>Приморский</item>
        <item>Пушкинский</item>
        <item>Фрунзенский</item>
        <item>Центральный</item>
    </string-array>

    <string name="save_districts">OK</string>
    <string name="cancel_districts">Отмена</string>

    <string name="any_district">Любой район</string>
    <string name="any_district_msc">Любой округ</string>

    <string name="enable_notifications">Push-уведомления</string>

    <string name="save_settings">Сохранить</string>

    <string name="new_ads_flag">new</string>

    <string name="alert_button_description">Кнопка сообщения об ошибке</string>
    <string name="alert_title">Сообщить об ошибке</string>
    <string name="other_alert_title">Опишите ошибку</string>
    <string-array name="alert_values">
        <item>Агент</item>
        <item>Спам</item>
        <item>Неверный район</item>
        <item>Другое</item>
    </string-array>

    <string name="settings_text">Я хочу</string>
    <string name="rent_in">Снять</string>
    <string name="rent_out">Сдать</string>

    <string name="apartment">Квартиру</string>
    <string name="room">Комнату</string>

    <string name="key_words">Ключевые слова</string>
    <string name="add_key_word">+ Добавить</string>

    <string name="gallery_count">%1$d из %2$d</string>

    <string name="default_notification_channel_id">Advert_Channel_id</string>
</resources>
