<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kirille.lifepriority.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.kirille.lifepriority.ui.bookmarks.BookmarksFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kirille.lifepriority.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>