<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested"
    tools:context=".ui.settings.SettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/notificationsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/cityText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto"
                android:text="@string/enable_notifications"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/notificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:paddingLeft="10dp"
                android:thumbTint="@drawable/newthumb"
                android:trackTint="@drawable/newthumb"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/city"
            android:textColor="#000"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cityLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationsLayout" />

        <RelativeLayout
            android:id="@+id/cityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_border2"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/districtLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityText">

            <TextView
                android:id="@+id/city_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto"
                android:spinnerMode="dialog"
                android:textColor="#000"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/drop_down_description"
                app:srcCompat="@drawable/outline_arrow_drop_down_24"
                app:tint="@color/colorPrimary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/districtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_border2"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/settingsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityLayout">

            <TextView
                android:id="@+id/district_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto"
                android:spinnerMode="dialog"
                android:textColor="#000"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/drop_down_description"
                app:srcCompat="@drawable/outline_arrow_drop_down_24"
                app:tint="@color/colorPrimary" />

        </RelativeLayout>


        <TextView
            android:id="@+id/settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto"
            android:text="@string/settings_text"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rentInCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/districtLayout"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/rentInCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto"
            android:minHeight="48dp"
            android:text="@string/rent_in"
            android:textSize="15sp"
            android:theme="@style/AdvertCheckBox"
            android:translationX="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/rentOutCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsText"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/rentOutCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:minHeight="48dp"
            android:text="@string/rent_out"
            android:textSize="15sp"
            android:theme="@style/AdvertCheckBox"
            android:translationX="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/apartmentCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rentInCheckbox" />

        <CheckBox
            android:id="@+id/apartmentCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:minHeight="48dp"
            android:text="@string/apartment"
            android:textSize="15sp"
            android:theme="@style/AdvertCheckBox"
            android:translationX="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/roomCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rentOutCheckbox" />

        <CheckBox
            android:id="@+id/roomCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto"
            android:minHeight="48dp"
            android:text="@string/room"
            android:textSize="15sp"
            android:theme="@style/AdvertCheckBox"
            android:translationX="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/edtInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apartmentCheckbox" />

        <TextView
            android:id="@+id/keyWordsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/key_words"
            android:textColor="#000"
            android:textSize="13sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/edtInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomCheckbox" />

        <EditText
            android:id="@+id/edtInput"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/spinner_border2"
            android:hint=""
            android:inputType="text"
            android:paddingTop="5dp"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyWordsText"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add_key_word"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInput" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keyWordsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:theme="@style/ProgressBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/rounded2"
            android:text="@string/save_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyWordsRecycler"
            android:focusable="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>